--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <description>tool</description>
   <modules>
   	<module>GeneratorJava</module>
+  	<module>Pay</module>
   </modules>
   <properties>
   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,6 +18,7 @@
 		<lombok.version>1.16.18</lombok.version>
 		<project.version>1.0</project.version>
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+		<alipay.version>3.4.27.ALL</alipay.version>
   </properties>
   <dependencyManagement>
   	<dependencies>
@@ -41,6 +43,24 @@
 		    <scope>provided</scope>
 		    <version>${lombok.version}</version>  
 		</dependency>
+		<dependency>
+		    <groupId>com.alipay.sdk</groupId>
+		    <artifactId>alipay-sdk-java</artifactId>
+		    <version>${alipay.version}</version>
+		</dependency>
+		<dependency>
+			<!-- Import dependency management from Spring Boot -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-dependencies</artifactId>
+			<version>2.1.0.RELEASE</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.2</version>
+		</dependency>
   	</dependencies>
   </dependencyManagement>
   <build>
@@ -56,6 +76,11 @@
                         <target>1.8</target>
                     </configuration>
                 </plugin>
+                <plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>2.1.0.RELEASE</version>
+				</plugin>
             </plugins>
         </pluginManagement>
     </build>
